2021-02-28  Allen D. Ball  <ball@hcf.dev>

	* Added Bindings parameter to
	Magic.execute(Bindings,String,String) interface.  In
	Shell.execute(String) method, synchronize __.bindings (defined in
	the JShell instance) with JShell.variables().

2021-02-26  Allen D. Ball  <ball@hcf.dev>

	* Added Magic.isComplete(String,String) interface method and
	implemented for Java Magic.

2021-02-25  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/install/Install.java:
	Added support for --id-prefix=PREFIX and --id-suffix=SUFFIX
	installation options.

	* Enable the Kernel @RestController.  Implement the print POST
	method and use the method to move MIME bundles from the JShell to
	the Kernel.

	* src/main/java/ganymede/connect/Connect.java:
	Always start the Kernel @RestController.

	* Re-branded as Ganymede.

2021-02-24  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/shell/magic/AbstractScriptEngineMagic.java,
	src/main/java/galyleo/shell/magic/Javascript.java:
	Initial writing.

	* src/main/java/galyleo/dependency/Resolver.java:
	Added working dependency resolution.

2021-02-23  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/dependency/POM.java:
	Use org.eclipse.aether Dependency and RemoteRepository in
	interfaces.

	* src/main/java/galyleo/shell/Shell.java:
	In resolve(POM), update the JShell classpath with newly resolved
	files.

	* src/main/java/galyleo/dependency/Resolver.java:
	Provide classpath management.

	* src/main/java/galyleo/dependency/Analyzer.java:
	Use org.eclipse.aether.artifact.Artifact.

2021-02-22  Allen D. Ball  <ball@hcf.dev>

	* Interim check-in: Integrated Apache Maven Artifact Resolver.

2021-02-21  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/dependency/Analyzer.java:
	Refactored to use POM.Dependency for Artifact implementation.

	* src/main/java/galyleo/shell/magic/AbstractMagic.java:
	Initial writing: Provides common PropertyPlaceholderHelper.

	* src/main/java/galyleo/shell/Shell.java: