@@ -1,5 +1,7 @@
 2021-02-28  Allen D. Ball  <ball@hcf.dev>
 
+	* Added %%thymeleaf Magic.
+
 	* Added Bindings parameter to
 	Magic.execute(Bindings,String,String) interface.  In
 	Shell.execute(String) method, synchronize __.bindings (defined in
